# technesisl_parse_bot

./: .env.example  .gitignore  README.md  example.xlsx  main.py  pyproject.toml
tg_bot/bot/: bot.py  handlers.py
tg_bot/bot/services/: db_service.py  excel_service.py  parser_services.py
